fix: ajuster l'alignement du bouton UI en le flottant à droite

--- a/src/index.css
+++ b/src/index.css
@@ -141,7 +141,7 @@ progress {
 }
 
 .btn-ui {
-  margin: auto;
+  float: right;
 }
 
 .options {
